--- a/.homeybuild/app.json
+++ b/.homeybuild/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.kohler.dtv-plus",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "compatibility": ">=12.2.0",
   "sdk": 3,
   "platforms": [
@@ -226,5 +226,18 @@
       ],
       "id": "dtv+-system-controller"
     }
-  ]
+  ],
+  "capabilities": {
+    "outlet_toggle": {
+      "type": "boolean",
+      "title": {
+        "en": "Outlet"
+      },
+      "getable": true,
+      "setable": true,
+      "uiComponent": "button",
+      "uiQuickAction": false,
+      "insights": false
+    }
+  }
 }
