--- a/.homeybuild/app.json
+++ b/.homeybuild/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.kohler.dtv-plus",
-  "version": "1.0.15",
+  "version": "1.0.16",
   "compatibility": ">=12.2.0",
   "sdk": 3,
   "platforms": [
@@ -238,6 +238,18 @@
       "uiComponent": "button",
       "uiQuickAction": false,
       "insights": false
+    },
+    "shower_toggle": {
+      "type": "boolean",
+      "title": {
+        "en": "Start / Stop"
+      },
+      "getable": true,
+      "setable": true,
+      "uiComponent": "button",
+      "uiQuickAction": true,
+      "insights": false,
+      "icon": "/assets/icon.svg"
     }
   }
 }
