--- a/.homeybuild/app.json
+++ b/.homeybuild/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.kohler.dtv-plus",
-  "version": "1.0.19",
+  "version": "1.0.20",
   "compatibility": ">=12.2.0",
   "sdk": 3,
   "platforms": [
@@ -259,6 +259,24 @@
       "uiQuickAction": false,
       "icon": "/assets/icon.svg",
       "insights": false
+    },
+    "valve_setpoint": {
+      "type": "number",
+      "title": {
+        "en": "Target temperature"
+      },
+      "units": {
+        "en": "°C"
+      },
+      "getable": true,
+      "setable": true,
+      "uiComponent": "slider",
+      "uiQuickAction": false,
+      "min": 30,
+      "max": 45,
+      "step": 0.5,
+      "icon": "/assets/icon.svg",
+      "insights": true
     }
   }
 }
