--- a/app.json
+++ b/app.json
@@ -232,7 +232,7 @@
       },
       "getable": true,
       "setable": true,
-      "uiComponent": "button",
+      "uiComponent": "toggle",
       "uiQuickAction": false,
       "insights": false
     },
@@ -259,24 +259,6 @@
       "uiQuickAction": false,
       "icon": "/assets/icon.svg",
       "insights": false
-    },
-    "valve_setpoint": {
-      "type": "number",
-      "title": {
-        "en": "Target temperature"
-      },
-      "units": {
-        "en": "°C"
-      },
-      "getable": true,
-      "setable": true,
-      "uiComponent": "slider",
-      "uiQuickAction": false,
-      "min": 30,
-      "max": 45,
-      "step": 0.5,
-      "icon": "/assets/icon.svg",
-      "insights": true
     }
   }
 }
