--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.kohler.dtv-plus",
-  "version": "1.0.26",
+  "version": "1.0.27",
   "compatibility": ">=12.2.0",
   "sdk": 3,
   "platforms": [
@@ -234,7 +234,8 @@
       "setable": true,
       "uiComponent": "button",
       "uiQuickAction": false,
-      "insights": false
+      "insights": false,
+      "icon": "/assets/outlets/0.svg"
     },
     "outlet_2": {
       "type": "boolean",
@@ -245,7 +246,8 @@
       "setable": true,
       "uiComponent": "button",
       "uiQuickAction": false,
-      "insights": false
+      "insights": false,
+      "icon": "/assets/outlets/0.svg"
     },
     "outlet_3": {
       "type": "boolean",
@@ -256,7 +258,8 @@
       "setable": true,
       "uiComponent": "button",
       "uiQuickAction": false,
-      "insights": false
+      "insights": false,
+      "icon": "/assets/outlets/0.svg"
     },
     "outlet_4": {
       "type": "boolean",
@@ -267,7 +270,8 @@
       "setable": true,
       "uiComponent": "button",
       "uiQuickAction": false,
-      "insights": false
+      "insights": false,
+      "icon": "/assets/outlets/0.svg"
     },
     "outlet_5": {
       "type": "boolean",
@@ -278,7 +282,8 @@
       "setable": true,
       "uiComponent": "button",
       "uiQuickAction": false,
-      "insights": false
+      "insights": false,
+      "icon": "/assets/outlets/0.svg"
     },
     "outlet_6": {
       "type": "boolean",
@@ -289,7 +294,8 @@
       "setable": true,
       "uiComponent": "button",
       "uiQuickAction": false,
-      "insights": false
+      "insights": false,
+      "icon": "/assets/outlets/0.svg"
     },
     "shower_toggle": {
       "type": "boolean",
