--- a/.homeybuild/app.json
+++ b/.homeybuild/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.kohler.dtv-plus",
-  "version": "1.0.22",
+  "version": "1.0.27",
   "compatibility": ">=12.2.0",
   "sdk": 3,
   "platforms": [
@@ -225,16 +225,77 @@
     }
   ],
   "capabilities": {
-    "outlet_toggle": {
+    "outlet_1": {
       "type": "boolean",
       "title": {
-        "en": "Outlet"
+        "en": "Outlet 1"
       },
       "getable": true,
       "setable": true,
-      "uiComponent": "toggle",
+      "uiComponent": "button",
       "uiQuickAction": false,
-      "insights": false
+      "insights": false,
+      "icon": "/assets/outlets/1.svg"
+    },
+    "outlet_2": {
+      "type": "boolean",
+      "title": {
+        "en": "Outlet 2"
+      },
+      "getable": true,
+      "setable": true,
+      "uiComponent": "button",
+      "uiQuickAction": false,
+      "insights": false,
+      "icon": "/assets/outlets/1.svg"
+    },
+    "outlet_3": {
+      "type": "boolean",
+      "title": {
+        "en": "Outlet 3"
+      },
+      "getable": true,
+      "setable": true,
+      "uiComponent": "button",
+      "uiQuickAction": false,
+      "insights": false,
+      "icon": "/assets/outlets/1.svg"
+    },
+    "outlet_4": {
+      "type": "boolean",
+      "title": {
+        "en": "Outlet 4"
+      },
+      "getable": true,
+      "setable": true,
+      "uiComponent": "button",
+      "uiQuickAction": false,
+      "insights": false,
+      "icon": "/assets/outlets/1.svg"
+    },
+    "outlet_5": {
+      "type": "boolean",
+      "title": {
+        "en": "Outlet 5"
+      },
+      "getable": true,
+      "setable": true,
+      "uiComponent": "button",
+      "uiQuickAction": false,
+      "insights": false,
+      "icon": "/assets/outlets/1.svg"
+    },
+    "outlet_6": {
+      "type": "boolean",
+      "title": {
+        "en": "Outlet 6"
+      },
+      "getable": true,
+      "setable": true,
+      "uiComponent": "button",
+      "uiQuickAction": false,
+      "insights": false,
+      "icon": "/assets/outlets/1.svg"
     },
     "shower_toggle": {
       "type": "boolean",
