--- a/app.json
+++ b/app.json
@@ -33,6 +33,38 @@
     "triggers": [
       {
         "title": {
+          "en": "Shower turned off"
+        },
+        "hint": {
+          "en": "Triggered when the shower stops running"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=dtv+-system-controller"
+          }
+        ],
+        "id": "shower-turned-off"
+      },
+      {
+        "title": {
+          "en": "Shower turned on"
+        },
+        "hint": {
+          "en": "Triggered when the shower starts running"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=dtv+-system-controller"
+          }
+        ],
+        "id": "shower-turned-on"
+      },
+      {
+        "title": {
           "en": "Water temperature changed"
         },
         "hint": {
@@ -59,6 +91,35 @@
       }
     ],
     "conditions": [
+      {
+        "title": {
+          "en": "Shower outlet is on"
+        },
+        "titleFormatted": {
+          "en": "Shower outlet [[outlet]] is on"
+        },
+        "hint": {
+          "en": "Check if a specific shower outlet is currently active"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=dtv+-system-controller"
+          },
+          {
+            "type": "autocomplete",
+            "name": "outlet",
+            "title": {
+              "en": "Outlet"
+            },
+            "placeholder": {
+              "en": "Select an outlet…"
+            }
+          }
+        ],
+        "id": "outlet-is-on"
+      },
       {
         "title": {
           "en": "Shower water is running"
@@ -105,6 +166,22 @@
           }
         ],
         "id": "start-preset"
+      },
+      {
+        "title": {
+          "en": "Start the shower"
+        },
+        "hint": {
+          "en": "Start the shower with the currently enabled outlets"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=dtv+-system-controller"
+          }
+        ],
+        "id": "start-shower"
       },
       {
         "title": {
@@ -160,6 +237,64 @@
           }
         ],
         "id": "stop-shower"
+      },
+      {
+        "title": {
+          "en": "Turn off shower outlet"
+        },
+        "titleFormatted": {
+          "en": "Turn off shower outlet [[outlet]]"
+        },
+        "hint": {
+          "en": "Disable a specific shower outlet; stops the shower if it was the last active outlet"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=dtv+-system-controller"
+          },
+          {
+            "type": "autocomplete",
+            "name": "outlet",
+            "title": {
+              "en": "Outlet"
+            },
+            "placeholder": {
+              "en": "Select an outlet…"
+            }
+          }
+        ],
+        "id": "turn-off-outlet"
+      },
+      {
+        "title": {
+          "en": "Turn on shower outlet"
+        },
+        "titleFormatted": {
+          "en": "Turn on shower outlet [[outlet]]"
+        },
+        "hint": {
+          "en": "Enable a specific shower outlet and start the shower if not already running"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=dtv+-system-controller"
+          },
+          {
+            "type": "autocomplete",
+            "name": "outlet",
+            "title": {
+              "en": "Outlet"
+            },
+            "placeholder": {
+              "en": "Select an outlet…"
+            }
+          }
+        ],
+        "id": "turn-on-outlet"
       }
     ]
   },
